<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.app.yamamz.deviceipmacscanner.MainActivity"
    tools:showIn="@layout/activity_main"
    android:id="@+id/mainView"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp"
    >

    <android.support.v7.widget.CardView android:layout_width="0dp"
        android:layout_height="110dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        android:id="@+id/cardView">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraintLayout"
    tools:layout_editor_absoluteY="0dp"
    tools:layout_editor_absoluteX="0dp">


    <TextView
        android:textSize="@dimen/textSize"
        android:id="@+id/externalIpAddressLabel"
        android:padding="@dimen/paddingDeviceInfo"
        android:layout_height="0dp"
        android:text="@string/externalIpLabel"
        android:layout_width="wrap_content"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/ssidLabel"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/ssidLabel" />

    <TextView
        android:textSize="@dimen/textSize"
        android:id="@+id/externalIpAddress"
        android:padding="@dimen/paddingDeviceInfo"
        android:layout_height="0dp"
        android:layout_width="72dp"
        android:text="@string/fetching"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/ssid"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/ssid" />


    <TextView
        android:textSize="@dimen/textSize"
        android:id="@+id/signalStrengthLabel"
        android:padding="@dimen/paddingDeviceInfo"
        android:layout_height="0dp"
        android:text="@string/signalLabel"
        android:layout_width="wrap_content"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/bssidLabel"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/bssidLabel" />

    <TextView
        android:textSize="@dimen/textSize"
        android:id="@+id/signalStrength"
        android:padding="@dimen/paddingDeviceInfo"
        android:layout_height="0dp"
        android:layout_width="wrap_content"


        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/bssid"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/bssid" />


    <TextView
        android:textSize="@dimen/textSize"
        android:id="@+id/ssidLabel"
        android:padding="@dimen/paddingDeviceInfo"
        android:layout_height="0dp"
        android:text="@string/ssid"
        android:layout_width="wrap_content"
        tools:layout_editor_absoluteY="5dp"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:textSize="@dimen/textSize"
        android:id="@+id/ssid"
        android:padding="@dimen/paddingDeviceInfo"
        android:layout_height="0dp"
        android:layout_width="wrap_content"

        app:layout_constraintLeft_toRightOf="@+id/ssidLabel"
        android:layout_marginLeft="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/ssidLabel"
        android:layout_marginBottom="0dp" />


    <TextView
        android:textSize="@dimen/textSize"
        android:layout_width="wrap_content"
        android:id="@+id/bssidLabel"
        android:padding="@dimen/paddingDeviceInfo"
        android:layout_height="0dp"
        android:text="@string/bssid"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/externalIpAddressLabel"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/externalIpAddressLabel" />

    <TextView
        android:textSize="@dimen/textSize"
        android:id="@+id/bssid"
        android:padding="@dimen/paddingDeviceInfo"
        android:layout_height="0dp"
        android:layout_width="wrap_content"

        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/externalIpAddress"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/externalIpAddress" />

</android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:scrollbars="vertical"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />


</android.support.constraint.ConstraintLayout>
