<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:padding="1dp"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp"
    >

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="-13dp"
        app:layout_constraintHorizontal_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="29dp"
            tools:layout_editor_absoluteY="23dp">

            <ImageView
                android:id="@+id/deviceLogo"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="153dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:padding="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />


            <TextView
                android:id="@+id/deviceIp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ipPlaceholder"

                android:textSize="12sp"
                tools:layout_conversion_absoluteHeight="14dp"
                tools:layout_conversion_absoluteWidth="46dp"
                tools:layout_conversion_absoluteX="333dp"
                tools:layout_conversion_absoluteY="4dp"
                app:layout_constraintTop_toTopOf="@+id/deviceLogo"
                android:layout_marginTop="0dp"
                app:layout_constraintLeft_toRightOf="@+id/deviceLogo"
                android:layout_marginLeft="8dp" />


            <TextView

                android:id="@+id/macAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/macHolder"
                android:textSize="12sp"
                tools:layout_conversion_absoluteHeight="14dp"
                tools:layout_conversion_absoluteWidth="68dp"
                tools:layout_conversion_absoluteX="4dp"
                tools:layout_conversion_absoluteY="18dp"
                app:layout_constraintBottom_toBottomOf="@+id/deviceLogo"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/deviceIp"
                app:layout_constraintLeft_toRightOf="@+id/deviceLogo"
                android:layout_marginLeft="8dp" />

            <TextView
                android:id="@+id/deviceName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deviceName"
                android:textSize="12sp"
                tools:layout_conversion_absoluteHeight="14dp"
                tools:layout_conversion_absoluteWidth="32dp"
                tools:layout_conversion_absoluteX="4dp"
                tools:layout_conversion_absoluteY="4dp"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/deviceIp"
                android:layout_marginTop="0dp" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>

